--- a/client-fe/package.json
+++ b/client-fe/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,6 +12,7 @@
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "lucide-react": "^0.515.0",
     "ng-zorro-antd": "^19.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
